try to fix f*king overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -59,6 +59,12 @@ h4 {
 // ::-webkit-scrollbar-thumb:hover {
 //   background: linear-gradient(0deg, #6855EC 0%, #CA79DF 100%);
 // }
+#root {
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: clip;
+}
+
 @media screen and (max-width:1799px) {
     .App {
         max-width: 1300px;
@@ -77,23 +83,9 @@ h4 {
     }
 }
 
-@media screen and (max-width:1023px) {
-    .App {
-        max-width: 100vw;
-        min-width: 375px;
-        position: relative;
-        overflow-y: hidden;
-    }
-}
+@media screen and (max-width:1023px) {}
 
-@media screen and (max-width:767px) {
-    .App {
-        max-width: 100vw;
-        min-width: 375px;
-        position: relative;
-        overflow-y: hidden;
-    }
-}
+@media screen and (max-width:767px) {}
 
 @import "./nav";
 @import "./header";
